--- a/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
+++ b/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
@@ -69,22 +69,22 @@
     <string name="legal_workday_invalidate">Date expirate (în prezent, alarma sună de Luni până Vineri)</string>
     <string name="legal_workday_invalidate_message">(Date expirate. Actualizaţi în Setări)</string>
     <string name="legal_workday_message">" (Alarmă dezactivată în zilele de sărbătoare)"</string>
-  <string name="life_post_setting">Life post</string>
-    <string name="life_post_setting_open_subtitle">Arată starea vremii și informații despre trezire după ce se oprește alarma între orele 4:00-9:30</string>
-  <string name="life_post_setting_open_title">Open life post</string>
+    <string name="life_post_setting">Raport de dimineață</string>
+    <string name="life_post_setting_open_subtitle">Primiți informații despre starea vremii atunci când opriți alarma între orele 4:00-9:30</string>
+    <string name="life_post_setting_open_title">Primiți un raport dimineața</string>
     <string name="life_post_setting_wake_up_list_title">Istoricul de trezire</string>
     <string name="life_post_wake_up_acumu_day_title">Contor zile</string>
     <string name="life_post_wake_up_item_acumu_day">%1$s zile</string>
-    <string name="life_post_wake_up_item_acumu_day_title">Acumulați zile</string>
-    <string name="life_post_wake_up_item_percentage_title">Întreceți fanii Mi</string>
+    <string name="life_post_wake_up_item_acumu_day_title">Contor zile</string>
+    <string name="life_post_wake_up_item_percentage_title">Fani Mi întrecuți</string>
     <string name="life_post_wake_up_item_time_title">Ora de trezire</string>
     <string name="life_post_wake_up_percentage_sign">%</string>
-    <string name="life_post_wake_up_percentage_title">Astăzi ați întrecut</string>
+    <string name="life_post_wake_up_percentage_title">Fani Mi întrecuți</string>
     <string name="life_post_wake_up_time_title">Ora de trezire</string>
     <string name="life_post_weather_degree_invalid">--</string>
     <string name="life_post_weather_description">%1$s, %2$s, %3$s</string>
     <string name="life_post_weather_description_secondary">%1$s,%2$s,%3$s</string>
-    <string name="life_post_weather_invalid">Starea vremii trebuie actualizată</string>
+    <string name="life_post_weather_invalid">"Nu s-au putut obține date despre starea vremii, atingeți pentru a încerca din nou"</string>
     <string name="life_post_weather_temperature_centigrade">°C</string>
     <string name="loading_ringtone">Se încarcă tonul soneriei…</string>
     <string name="menu_add_worldclock">Adăugaţi un fus orar</string>
