--- a/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
@@ -603,18 +603,21 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="item_usb_debug">Depanare USB</string>
     <string name="item_virus">Virus</string>
     <string name="item_virus_lib">Actualizare automată a definițiilor de viruși</string>
-    <string name="keywords_antispam">Listă blocări;Blocare;Black list;Smart blocklist;Fraudă;Vânzări;Agenți</string>
+    <string name="keywords_antispam">Listă blocări;Blocare;Lista blocărilor;Listă blocări inteligentă;Fraudă;Vânzări;Agenți</string>
     <string name="keywords_antivirus">Virus;Risc;Antivirus;Scanare</string>
+    <string name="keywords_app_permissions">Permisiuni;Localizare;Accesare contacte;Permisiuni;Permisiunile aplicațiilor</string>
+    <string name="keywords_auto_restart">Pornire automată; Permisiuni;Pornire automată;Autostart; Gestionare pornire automată; Pornire automată MIUI; Pornire automată aplicații; pornire automată aplicații;Chain start;chained start;pornire programată</string>
+    <string name="keywords_buy_flow">date;date mobile;achiziționați date;achiziționați date mobile;reîncărcare date;plan de date</string>
     <string name="keywords_cleanmaster">Coș de gunoi;Golire;Viteză;Stocare;Cache</string>
-    <string name="keywords_monthreport">Raport;Raport lunar;Raport anual;Raport de securitate</string>
     <string name="keywords_networkassistant_1">Date;Trafic</string>
     <string name="keywords_networkassistant_2">Date;Calibrare</string>
     <string name="keywords_networkassistant_4">Conecxiune;Internet;Test</string>
-    <string name="keywords_permcenter">Autostart;Permisiuni;ROOT;Locație;Acces contacte</string>
-    <string name="keywords_powercenter">Economisire acumulator;Încălzire;Activare;Dezactivare;Acumulator;Descărcare</string>
+    <string name="keywords_payment_security">Verificați securitatea plăților;securitatea plăților;plată sigură;plăți sigure;protecția plății;protejare plăți;plăți protejate;zonă sigură;zonă de plată</string>
+    <string name="keywords_powercenter">Economisire acumulator;Încălzire;Activare;Dezactivare;Acumulator;Descărcare;Baterie;Probleme acumulator;Energie;Descărcare;Economisire energie;Economisirea energiei;Economisire acumulator</string>
     <string name="keywords_powercenter_powerrank">Utilizare acumulator</string>
     <string name="keywords_securitycenter">Securitate;Verificare;Scanare</string>
-    <string name="keywords_securitycenter_settings">Economisire acumulator;Permisiuni;Listă blocări;Utilizare date;Setare plan de date;Testare rețea;Blocare aplicații;Economisire acumulator;Încălzire;Activare;Dezactivare;Acumulator;Descărcare;Pornire automată;ROOT;Locație;Acces contacte;Blocare;Black list;Smart blocklist;Fraudă;Vânzări;Telemarketing;Agenți;Date;Trafic;Calibrare;Conexiune;Internet;Test;Parolă;Confidențialitate;Acces;Protecție</string>
+    <string name="keywords_securitycenter_settings">Utilizare acumulator;Gestionare pornire automată;Instalare prin USB;Permisiunile aplicațiilor;Achiziționați date mobile;Lstă blocări;Utilizare date;Calibrare plan de date;Testare rețea;Economisire acumulator;Încălzire;Activare;Dezactivare;Acumulator;Probleme acumulator;Setare plan de date;Testare rețea;Blocare aplicații;Economisire acumulator;Încălzire;Activare;Dezactivare;Acumulator;Descărcare;Pornire automată;ROOT;Locație;Acces contacte;Blocare;Black list;Smart blocklist;Fraudă;Vânzări;Telemarketing;Agenți;Date;Trafic;Calibrare;Conexiune;Internet;Test;Parolă;Confidențialitate;Acces;Protecție</string>
+    <string name="keywords_usb_install">Instalări prin USB;instalați de pe computer;Instalare prin ADB</string>
     <string name="kilobyteShort">KB</string>
     <string name="kilobyte_per_second">KB/s</string>
     <string name="label_mi_stats">Mi analytics</string>
@@ -906,16 +909,19 @@ C"&lt;/b&gt;"itiți instrucțiunile care însoțesc router-ul și resetaţi-l la
     <string name="password_promotion_title">Parola de protejare a confidențialității</string>
     <string name="path_antispam">Aplicații de sistem/Securitate/Listă blocări</string>
     <string name="path_antivirus">Aplicații de sistem/Securitate/Scanare pentru viruși</string>
+    <string name="path_app_permissions">Aplicații de sistem/Securitate/Permisiuni/Permisiunile aplicațiilor</string>
+    <string name="path_auto_restart">Aplicații de sistem/Securitate/Permisiuni/Gestionare pornire automată</string>
+    <string name="path_buy_flow">Aplicații de sistem/Securitate/Utilizare date/Achiziționați date mobile</string>
     <string name="path_cleanmaster">Aplicații de sistem/Securitate/Curățare</string>
-    <string name="path_monthreport">Aplicații de sistem/Securitate</string>
     <string name="path_networkassistant_1">Aplicații de sistem/Securitate/Utilizare date</string>
     <string name="path_networkassistant_2">Aplicații de sistem/Securitate/Utilizare date</string>
     <string name="path_networkassistant_4">Aplicații de sistem/Securitate/Utilizare date/Verificare rețea</string>
-    <string name="path_permcenter">Aplicații de sistem/Securitate/Permisiuni</string>
+    <string name="path_payment_security">Aplicații de sistem/Securitate/Securitatea plăților</string>
     <string name="path_powercenter">Aplicații de sistem/Securitate/Utilizare acumulator</string>
     <string name="path_powercenter_powerrank">Acumulator și performanță/Utilizare acumulator</string>
     <string name="path_securitycenter">Aplicații de sistem/Securitate</string>
     <string name="path_securitycenter_settings">Aplicații de sistem/Securitate</string>
+    <string name="path_usb_install">Aplicații de sistem/Securitate/Permisiuni/Instalări prin USB</string>
     <string name="pay_charge">Achiziţionaţi date suplimentare</string>
     <string name="pc_battery_history_show_imei">IMEI:</string>
     <string name="pc_install_manager">Instalare prin USB</string>
@@ -1134,16 +1140,19 @@ C"&lt;/b&gt;"itiți instrucțiunile care însoțesc router-ul și resetaţi-l la
     <string name="replace_dns">Înlocuire DNS în mod automat</string>
     <string name="resource_antispam">Listă blocări</string>
     <string name="resource_antivirus">Scanare pentru viruși</string>
+    <string name="resource_app_permissions">Permisiunile aplicațiilor</string>
+    <string name="resource_auto_restart">Gestionați pornirea automată</string>
+    <string name="resource_buy_flow">Achiziționați date mobile</string>
     <string name="resource_cleanmaster">Curățare</string>
-    <string name="resource_monthreport">Raport de securitate</string>
     <string name="resource_networkassistant_1">Utilizare date mobile</string>
     <string name="resource_networkassistant_2">Calibrare plan de date mobile</string>
     <string name="resource_networkassistant_4">Testare rețea</string>
-    <string name="resource_permcenter">Permisiuni</string>
+    <string name="resource_payment_security">Securitatea plăților</string>
     <string name="resource_powercenter">Utilizare acumulator</string>
     <string name="resource_powercenter_powerrank">Acumulator și performanță</string>
     <string name="resource_securitycenter">Securitate</string>
     <string name="resource_securitycenter_settings">Securitate</string>
+    <string name="resource_usb_install">Instalare prin USB</string>
     <string name="result_autoscan_header">Monitorizare plăți</string>
     <string name="result_autoscan_info">Monitorizați în mod automat mediul sistemului atunci când aplicațiile de plăți sunt pornite</string>
     <string name="result_sign_header">Au fost găsite %d aplicații neoficiale</string>
