--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -34,7 +34,7 @@
     <string name="alert_title">Notificările calendarului</string>
     <string name="app_label">Calendar</string>
     <string name="birthday_calendar_display_name">Memento zi de naştere</string>
-    <string name="birthday_card_title">"Își serbează ziua astăzi"</string>
+    <string name="birthday_card_title">"Zi de naștere azi"</string>
     <string name="birthday_event_description_a_week_ago">Cu o săptămână în urmă</string>
     <string name="birthday_event_description_a_week_later">Peste o săptămână</string>
     <string name="birthday_event_description_day_after_tomorrow">Poimâine este </string>
@@ -120,26 +120,26 @@
   <string name="downloading_wallpaper">Imagine de fundal</string>
     <string name="edit_event_all_day_label">Toată ziua</string>
     <string name="edit_event_birthday_import_from_contact">Importați ziua de naștere din Agendă</string>
-    <string name="edit_event_birthday_name_empty_hint">Vă rugăm să introduceți un nume</string>
+    <string name="edit_event_birthday_name_empty_hint">Introduceți un nume</string>
     <string name="edit_event_birthday_name_hint">Nume</string>
-    <string name="edit_event_birthday_reminder_3_days_before">Și amintește-mi cu 3 zile înainte</string>
+    <string name="edit_event_birthday_reminder_3_days_before">Amintește-mi și cu 3 zile înainte</string>
     <string name="edit_event_birthday_reminder_summary">În acea zi la %1$s</string>
     <string name="edit_event_birthday_reminder_summary_3_days_before">Cu trei zile în urmă, și în acea zi la %1$s</string>
     <string name="edit_event_birthday_reminder_time">Dată memento</string>
     <string name="edit_event_calendar_label">Calendar</string>
-    <string name="edit_event_choose_date">selectați data</string>
+    <string name="edit_event_choose_date">Selectați data</string>
     <string name="edit_event_confirm_message">Renunțați la modificări?</string>
     <string name="edit_event_from_label">De la</string>
     <string name="edit_event_input_year">Introduceți anul</string>
     <string name="edit_event_label">Detalii</string>
-    <string name="edit_event_no_reminder_value">Niciun memento</string>
-    <string name="edit_event_reminder_text">%1$s în ziua %2$s</string>
-    <string name="edit_event_reminder_with_another_day_text">%1$s, %2$s ziua %3$s</string>
+    <string name="edit_event_no_reminder_value">"Nu-mi aminti"</string>
+    <string name="edit_event_reminder_text">Pe %1$s la %2$s</string>
+    <string name="edit_event_reminder_with_another_day_text">Pe %1$s, %2$s la %3$s</string>
     <string name="edit_event_show_all">Afişaţi-le pe toate</string>
-    <string name="edit_event_tab_anniversary">aniversare</string>
-    <string name="edit_event_tab_birthday">zi de naștere</string>
-    <string name="edit_event_tab_countdown">temporizator</string>
-    <string name="edit_event_tab_event">eveniment</string>
+    <string name="edit_event_tab_anniversary">Aniversare</string>
+    <string name="edit_event_tab_birthday">Zi de naștere</string>
+    <string name="edit_event_tab_countdown">Temporizator</string>
+    <string name="edit_event_tab_event">Eveniment</string>
     <string name="edit_event_to_label">Până la</string>
     <string name="email_guests_label">Trimiteţi e-mailuri invitaţilor</string>
     <string name="email_picker_label">E-mail cu</string>
@@ -167,8 +167,8 @@
     <string name="event_info_where">Unde</string>
   <string name="event_lunar_month">Lună</string>
     <string name="event_reminder_allday_day_zero">În acea zi la %2$s</string>
-    <string name="event_reminder_value_zero">La momentul evenimentului</string>
-    <string name="event_reminders_to_max">Acest eveniment suportă doar %d memento-uri</string>
+    <string name="event_reminder_value_zero">Înainte de eveniment</string>
+    <string name="event_reminders_to_max">Nu se pot seta %d memento-uri</string>
     <string name="event_title">Titlu</string>
     <string name="event_view">Vizualizaţi evenimentul</string>
     <string name="every_weekday">În fiecare zi lucrătoare (Luni – Vineri)</string>
@@ -278,7 +278,7 @@
     <string name="network_not_available">"Nu se poate conecta la rețea"</string>
     <string name="new_event_dialog_label">Eveniment nou</string>
     <string name="new_event_dialog_option">Eveniment nou</string>
-    <string name="no_contact_birthday_hint">Nicio zi de naștere de importat din Agendă</string>
+    <string name="no_contact_birthday_hint">Nicio zi de naștere de importat</string>
   <string name="no_network">Nicio rețea, încercați să reîmprospătați din nou rețeaua</string>
     <string name="no_network_btn">Reîncercați</string>
     <string name="no_title_label">(Fără titlu)</string>
