--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -710,6 +710,13 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="syncing_normal_title">Sincronizare fotografii și videoclipuri</string>
     <string name="system_album">Album de sistem</string>
     <string name="terabyteShort">TB</string>
+    <string name="text_append">Text</string>
+    <string name="text_append_color">Culoare</string>
+    <string name="text_append_font">Font</string>
+    <string name="text_append_font_example">Aa</string>
+    <string name="text_append_hint">Introduceți textul</string>
+    <string name="text_append_style">Bule</string>
+    <string name="text_append_transparent">Opacitate</string>
     <string name="tip_capture_location">Locație:</string>
     <string name="tip_capture_params">Informații EXIF:</string>
     <string name="tip_capture_time">Captată pe:</string>
